<resources>
    <string name="app_name">Twee</string>
    <string name="search_hint">Search show</string>
    <string name="details_lastaired">Last aired episode</string>
    <string name="details_upcoming">Next episode</string>
    <string name="details_totalwatched">Episodes watched</string>
    <string name="summary_header">Summary</string>
    <string name="actors_header">Actors</string>
    <string name="imdb_header">Imdb</string>
    <string name="button_imdb">More information</string>
    <string name="text_seriesrating">Rating</string>
    <string name="search_header">Searching for</string>
    <string name="settings_theme_header">Theme</string>
    <string name="settings_header_header">Download header image</string>
    <string name="settings_header_switch">Download header image</string>
    <string name="settings_header_description">Choose whether to download the header image or not (it\'s the large image in a show\'s overview - aprox. 1.5 MB).</string>
    <string name="settings_header_display">Home layout</string>
    <string name="settings_header_profile">Profiles</string>
    <string name="settings_description_profile">Different profiles allow you to have different users with their own shows and progresses. Note that the app settings are global.</string>
    <string name="settings_sortorder_header">Sort order</string>
    <string name="settings_header_sortorder">Home sort order</string>
    <string name="settings_header_showshows">Shows to display</string>
    <string name="homeactivity_tag_seriesid">seriesId</string>
    <string name="homeactivity_tag_id">Id</string>
    <string name="season_markaswatched">Mark season as watched</string>
    <string name="series_plot">Plot</string>
    <string name="series_summary">Summary</string>
    <string name="button_title_restore">Restore</string>
    <string name="button_title_backup">Backup</string>
    <string name="button_title_newprofile">Add new profile</string>
    <string name="edit_notimplemented">Edit profile is not implemented yet.</string>
    <string name="extension_title">Twee</string>
    <string name="extension_description">Get notified about episodes airing today</string>
    <string name="widget_message_noshow">No shows airing today!</string>
    <string name="title_activity_home">Twee</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_searchable">Search</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_about">About Twee</string>
    <string name="title_activity_profile_choose">Choose profile</string>
	<string name="TAG_RUNTIME">TAG_RUNTIME</string>
	<string name="TAG_AIRTIME">TAG_AIRTIME</string>
	<string name="TAG_TVRAGEID">TAG_TVRAGEID</string>
    <string name="section_title_episodes">EPISODES</string>
    <string name="section_title_overview">OVERVIEW</string>
    <string name="section_title_summary">SUMMARY</string>
    <string name="section_dropdown_yesterday">Yesterday</string>
    <string name="section_dropdown_today">Today</string>
    <string name="section_dropdown_tomorrow">One week</string>
    <string name="section_dropdown_week">One month</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Update all shows</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_markseries">Mark show as watched</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_chooseprofile">Select profile</string>
    <string name="menu_downloadimages">Download missing images</string>
    <string name="menu_downloadnewbanner">Download different banner</string>
    <string name="menu_tredning">Add from trakt.tv trending</string>
    <string name="menu_information">Information</string>
    <string name="menu_unwatched">Backlog</string>
    <string name="menu_setDate">Choose date</string>
    <string name="menu_backlog">What\'s backlog?</string>
    <string name="menu_cleanepisodes">Clean episodes</string>
    <string name="menu_addtocalendar">Add next episode to calendar</string>
    <string name="message_series_watched">All episodes have been marked as watched</string>
    <string name="message_season_watched">The season has been marked as watched</string>
    <string name="message_series_fetching">Downloading show data</string>
    <string name="message_series_fetching_done">Done downloading show data</string>
    <string name="message_nointernet">No connection!\nClick to try again.</string>
    <string name="message_noresult">No results found!</string>
    <string name="message_series_double">This show is already in your collection</string>
    <string name="message_episodes_updates">Updating episodes data</string>
    <string name="message_episodes_updates_done">Episodes have been updated</string>
    <string name="message_download_information">Downloading information&#x2026;</string>
    <string name="message_download_banner">Downloading banner image&#x2026;</string>
    <string name="message_download_header">Downloading header image&#x2026;</string>
    <string name="message_download_save_series">Saving show&#x2026;</string>
    <string name="message_download_save_episodes">Saving episodes&#x2026;</string>
    <string name="message_download_pleasewait">Please wait</string>
    <string name="message_downloading_images">Downloading images</string>
    <string name="message_downloading_images_success">Done downloading images</string>
    <string name="message_downloading_images_error">Error while downloading images</string>
    <string name="message_downloading_banner_error">Error while downloading new banner</string>
    <string name="message_downloading_show_error">Error while downloading show</string>
    <string name="message_update_show_error">Error while updating show</string>
    <string name="message_backup_error">The backup failed</string>
    <string name="message_backup_complete">The backup has been saved to /sdcard/twee/backup.txt</string>
    <string name="message_restore_error">The restore failed</string>
    <string name="message_restore_complete">All information has been restored!</string>
    <string name="message_noplot">No plot available</string>
    <string name="message_empty_collection"><b>Your collection is empty!</b>\n<i>press the magnifier to start adding shows</i></string>
    <string name="message_empty_backlog"><b>No episodes in the backlog</b>\n<i>press the clock to set backlog date</i></string>
    <string name="message_trending_information">These shows are the top 10 trending shows on Trakt.tv\n It\'s based on what people are watching <b>right now</b>\n\n <i>tip: refresh, and they may change :)</i></string>
    <string name="message_backlog_information">The backlog is perfect when you\'ve been away for a while, just enter the date you last watched an show and you will get a complete list of all the unwatched episodes since. \n\n<i>tip: click to display plot and longpress to mark as watched</i></string>
    <string name="pref_header_display">Display options</string>
    <string name="pref_header_other">Other options</string>
    <string name="message_episode_watched">Marked as watched</string>
    <string name="title_clean_episodes">Clean episodes</string>
    <string name="message_clean_episodes">Proceeding with this wil remove all TBA episodes from this show</string>
    <string name="message_clean_episodes_done">Successfully cleaned episodes, you must re-open this show to see the changes!</string>
    <string name="message_clean_episodes_error">Something went wrong when cleaning episodes!</string>
    <string name="update_shows_message">You haven´t updated your shows in <b>7</b> days, do you want to do it now?</string>
    <string name="update_shows_title">Update warning</string>
    <string name="message_show_ended">This show has ended</string>
    <string name="message_backup_warning">Backup or restore all your profiles and their added shows. \n\n<b>CAUTION!</b>\nWhen you restore a backup the database is wiped before restore, all non backed up information will be deleted!</string>
    <string name="message_profile_description">Multiple profiles makes it possible for your iPhone-using partner to experience the pure awesomeness of <b>Twee</b> without spoiling your nice collection of shows with his or her sucky shows ;D </string>
    <string name="message_calendar_noepisodes">No upcoming episodes for this show!</string>
    <string name="settings_theme_option_light">Light theme</string>
    <string name="settings_theme_option_darklight">Light theme with dark actionbar</string>
    <string name="settings_theme_option_dark">Dark theme</string>
	<string name="settings_display_option_googlenow">Google Now</string>
	<string name="settings_display_option_text">Text</string>
    <string name="settings_display_option_small">Minimal</string>
    <string name="settings_display_option_deafult">Default</string>
    <string name="settings_header_backup">Backup and restore</string>
    <string name="settings_sortorder_option_alphabetically">Alphabetically</string>
    <string name="settings_sortorder_option_nextepisode">Next episode</string>
    <string name="settings_sortorder_option_unwatched">Unwatched episodes</string>
    <string name="settings_showepisodes_option_all">All</string>
    <string name="settings_showepisodes_option_running">Continuing</string>
    <string name="settings_showepisodes_option_ended">Ended</string>
    <string name="about_close">Close</string>
    <string name="opensource_header">Open source libraries</string>
    <string name="opensource_text"><b>google-gson</b>\nhttps://code.google.com/p/google-gson/\n\n<b>Joda</b>\nhttp://joda-time.sourceforge.net/\n\n<b>Android-Universal-Image-Loader</b>\nhttps://github.com/nostra13/Android-Universal-Image-Loader</string>
    <string name="about_header">About Twee</string>
    <string name="about_text">Twee is getting all its information from thetvdb.com, support them in any way possible!</string>
    <string name="thanks_header">Thanks to</string>
    <string name="thanks_text">klizzer, vastis, M203, Reconnnn, mates, Arias, toffe, grief, zero, happyoccasion, helevorn, milky81, Oxygen, Cat, Snargaflab and the awesomse UserNamer at xda-developers for being super helpful! :)</string>
    <string name="stats_header">Numbers (beacause numbera are fun)</string>
    <string name="delete_title">Delete show</string>
    <string name="delete_proceed">Proceed</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_text">This can not be undone!</string>
    <string name="replace_banner_title">Replace banner</string>
    <string name="replace_banner_text">Download this banner?</string>
    <string name="cd_series_header">Header image</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_update_now">Update now</string>
    <string name="dialog_remindme_later">No, remind me in 7 days</string>
    <string name="settings_description_profile_popup">Enter the name of the new profile</string>
    <string name="dialog_selectprofile_header">Select profile</string>
    <string name="dialog_addprofile_header">New profile</string>
    <string name="dialog_editprofile_header">Edit profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preference">Settings</string>
    <string name="pref_themes_array_default">Light</string>
    <string name="pref_themes_summary">Selected theme: %s</string>
    <string name="pref_display_summary">Display layout: %s</string>
    <string name="settings_ignorethe_header">Ignore The in show name</string>
    <string name="settings_ignorethe_description">Ignore the leading "The" in show names when sorting alphabetically</string>
</resources>