<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:actionViewClass="android.widget.SearchView"
        android:icon="?menu_search"
        android:orderInCategory="1"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_add"/>
    <item
        android:id="@+id/menu_calendar"
        android:icon="?menu_calendar"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_calendar"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="?menu_refresh"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_trending"
        android:icon="?menu_trending"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_tredning"/>
    <item
        android:id="@+id/menu_unwatched"
        android:icon="?menu_trending"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_unwatched"/>
    <item
        android:id="@+id/menu_chooseprofile"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_chooseprofile"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>