<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/se.ja1984.twee" >

    <Preference
        android:icon="?pref_backup"
        android:title="@string/settings_header_backup" >
        <intent android:action="se.ja1984.twee.BackupActivity" />
    </Preference>
    <Preference
        android:icon="?pref_profiles"
        android:title="@string/settings_header_profile" >
        <intent android:action="se.ja1984.twee.ProfileActivity" />
    </Preference>

    <PreferenceCategory android:title="@string/pref_header_display" >
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/settings_theme_header"
            android:entries="@array/pref_themes_array"
            android:entryValues="@array/pref_themes_array_values"
            android:key="pref_theme"
            android:summary="%s"
            android:title="@string/settings_theme_header" />
        
        
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settings_header_display"
            android:entries="@array/pref_display_array"
            android:entryValues="@array/pref_display_array_values"
            android:key="pref_display"
            android:summary="%s"
            android:title="@string/settings_header_display" />
            />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settings_header_sortorder"
            android:entries="@array/pref_sortorder_array"
            android:entryValues="@array/pref_sortorder_array_values"
            android:key="pref_sortorder"
            android:summary="%s"
            android:title="@string/settings_header_sortorder" />
            />
            
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settings_header_showshows"
            android:entries="@array/pref_showepisodes_array"
            android:entryValues="@array/pref_showepisodes_array_values"
            android:key="pref_showshows"
            android:summary="%s"
            android:title="@string/settings_header_showshows" />
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_other" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_downloadheader"
            android:summary="@string/settings_header_description"
            android:title="@string/settings_header_header" />
    </PreferenceCategory>

</PreferenceScreen>