<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_add"
        	android:icon="?menu_search"
        	android:title="@string/menu_add"
        	android:showAsAction="always|collapseActionView"
        	android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/menu_refresh"
        android:icon="?menu_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="101"
        android:showAsAction="never" />
</menu>
