<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/settings_theme_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/grpTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioTheme0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/settings_theme_option_light"/>

        <RadioButton
            android:id="@+id/radioTheme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_option_darklight" />

        <RadioButton
            android:id="@+id/radioTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_option_dark" />
        
    </RadioGroup>
    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/settings_header_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_header_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/switchHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/settings_header_switch" />

    <Button
        android:id="@+id/btnBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Backup" />
    
    <Button
        android:id="@+id/btnRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Restore" />

</LinearLayout>