<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_backup_warning" />

    <Button
        android:id="@+id/btnBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_title_backup" />

    <Button
        android:id="@+id/btnRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_title_restore"
        android:enabled="false"
         />

</LinearLayout>