
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgSeriesHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cd_series_header"
        android:src="@drawable/noimage_large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgSeriesHeader"
        android:background="#AA000000"
        android:gravity="bottom"
        android:padding="3dp" >

        <TextView
            android:id="@+id/txtSeriesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/txtSeriesStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txtSeriesName"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#BBBBBB"
            android:textSize="10sp"
            android:textStyle="normal|bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/txtSeriesRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/txtSeriesRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtSeriesRating"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/text_seriesrating"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#BBBBBB"
            android:textSize="10sp"
            android:textStyle="normal|bold"
            android:typeface="normal" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtTotalWatched"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imgSeriesHeader"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/details_totalwatched"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="11sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <RelativeLayout
        android:id="@+id/containerWatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTotalWatched"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <ProgressBar
            android:id="@+id/pgrWatched"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/txtWatched"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/txtWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtLastAired"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/containerWatched"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/details_lastaired"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="11sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <RelativeLayout
        android:id="@+id/rllHeader1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLastAired"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_listitem"
        android:clickable="true" >

        <TextView
            android:id="@+id/txtLastAiredTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/chkWatched"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLastAiredEpisodeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txtLastAiredTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/chkWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtLastAiredEpisodeNumber"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtUpcomingEpisodes"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rllHeader1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/details_upcoming"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_blue_light"
        android:textColorLink="@android:color/holo_blue_light"
        android:textSize="11sp"
        android:textStyle="normal|bold"
        android:typeface="normal" />

    <ListView
        android:id="@+id/lstEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/txtUpcomingEpisodes"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</RelativeLayout>